test/classes/delete-free/lifetimes/field-init-escapes.good
field-init-escapes.chpl:21: warning: result of new D is now managed by default
field-init-escapes.chpl:21: note: 'new unmanaged D' gives old behavior
field-init-escapes.chpl:21: note: 'new borrowed D' is the new default
field-init-escapes.chpl:21: note: 'new owned D', 'new shared D' also available
field-init-escapes.chpl:21: note: get more help with --warn-unstable
field-init-escapes.chpl:16: In initializer:
field-init-escapes.chpl:17: warning: result of new C is now managed by default
field-init-escapes.chpl:17: note: 'new unmanaged C' gives old behavior
field-init-escapes.chpl:17: note: 'new borrowed C' is the new default
field-init-escapes.chpl:17: note: 'new owned C', 'new shared C' also available
field-init-escapes.chpl:17: note: get more help with --warn-unstable
field-init-escapes.chpl:17: error: Field x would outlive the value it is set to
